tests/analyze/regex-empty/analyze.snap
---
source: tests/analyze.rs
expression: output
---
error: Empty regular expression.
> 2 | def r-empty = `
                    ^

